--- a/style.css
+++ b/style.css
@@ -178,6 +178,12 @@ ul{
 	padding: 0;
 	list-style-type: none;
 }
+.img-logo-competition{
+	width: 350px;
+	margin-right: 25px;
+	margin-left: 25px;
+	margin-bottom: 25px;
+}
 
 @media (max-width: 993px) {
 	.navbar-nav {
@@ -293,7 +299,7 @@ ul{
 		width: 250px;
 	}
 
-	.deadline {
+	.deadline, .img-logo-competition {
 		width: 250px;
 		margin: auto;
 		text-align: center;
