--- a/polish-version-calisia-web/about.css
+++ b/polish-version-calisia-web/about.css
@@ -220,7 +220,9 @@ ul{
     color: #fff;
     text-decoration: none;
 }
-
+.mobile-only{
+    display: none;
+}
 @media (max-width: 1250px){
     .flex-about-row{
         flex-wrap: wrap;
@@ -230,6 +232,12 @@ ul{
     }
     .about-right{
         width: 100%;
+    }
+    .desktop-only{
+        display: none;
+    }
+    .mobile-only{
+        display: block;
     }
 }
 
