--- a/chinese-version/style.css
+++ b/chinese-version/style.css
@@ -50,6 +50,7 @@ body {
 	font-weight: 600;
 	margin-left: 20px;
 	transition: all 0.5s ease-in-out;
+	border: 1px solid #000;
 }
 
 .navbar-default .navbar-nav>li>a:hover,
