--- a/jury.css
+++ b/jury.css
@@ -45,6 +45,7 @@ body {
     margin-left: 20px;
     transition: all 0.5s ease-in-out;
     padding: 15px;
+    border: 1px solid #000;
 }	
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus,
