--- a/contact.css
+++ b/contact.css
@@ -83,8 +83,8 @@ body {
     margin: 20px 0 20px 10px;
     transition: all 0.5s ease-in-out;
 }	
-.fa{
-    opacity: 0%;
+.fa:hover{
+    color:#a48044;
 }
 
 .footer-s-1{
