--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.fa{
-    opacity: 0%;
+.fa:hover{
+    color:#a48044;
 }
 .footer-s-1 {
 	font-size: 15px;
