--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ body {
 .fa:hover{
     color:#a48044;
 }
+
+.fa:visited{
+    color:#fff;
+}
+
 .footer-s-1 {
 	font-size: 15px;
 	color: hsla(0, 0%, 100%, .8);
