--- a/contact.css
+++ b/contact.css
@@ -87,6 +87,10 @@ body {
     color:#a48044;
 }
 
+.fa:visited{
+    color:#fff;
+}
+
 .footer-s-1{
     font-size: 15px;
     color: hsla(0,0%,100%,.8);
