--- a/polish-version-calisia-web/style.css
+++ b/polish-version-calisia-web/style.css
@@ -112,10 +112,13 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.fa {
-	opacity: 0%;
+.fa:hover{
+    color:#a48044;
 }
 
+.fa:visited{
+    color:#fff;
+}
 .footer-s-1 {
 	font-size: 15px;
 	color: hsla(0, 0%, 100%, .8);
