chiceese social links and style

--- a/chinese-version/style.css
+++ b/chinese-version/style.css
@@ -112,8 +112,12 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.fa {
-	opacity: 0%;
+.fa:hover{
+    color:#a48044;
+}
+
+.fa:visited{
+    color:#fff;
 }
 
 .footer-s-1 {
