--- a/polish-version-calisia-web/team.css
+++ b/polish-version-calisia-web/team.css
@@ -162,8 +162,9 @@ body {
 
 }
 .p-team{
-    font-size: 16px;
+    font-size: 18px;
     line-height: 40px;
+    text-align: justify;
 }
 
 .pfooter{
