--- a/chinese-version/style.css
+++ b/chinese-version/style.css
@@ -112,12 +112,12 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.fa:hover{
-    color:#a48044;
+.fa:hover {
+	color: #a48044;
 }
 
-.fa:visited{
-    color:#fff;
+.fa:visited {
+	color: #fff;
 }
 
 .footer-s-1 {
@@ -157,7 +157,8 @@ body {
 	width: 400px;
 }
 
-.deadline, .img-logo-competition {
+.deadline,
+.img-logo-competition {
 	width: 350px;
 	margin: auto;
 	text-align: center;
@@ -177,19 +178,34 @@ body {
 .hamburger {
 	display: none;
 }
-.languages-2{
+
+.languages-2 {
 	display: none;
 }
-ul{
+
+ul {
 	padding: 0;
 	list-style-type: none;
 }
-.img-logo-competition{
+
+.img-logo-competition {
 	width: 350px;
 	margin-right: 25px;
 	margin-left: 25px;
 	margin-bottom: 25px;
 }
+
+a.download-button {
+	color: #a48044 !important;
+	text-decoration: none !important;
+	letter-spacing: 2px;
+}
+
+a.download-button:hover {
+	color: #000 !important;
+	text-decoration: none !important;
+}
+
 
 @media (max-width: 993px) {
 	.navbar-nav {
@@ -215,6 +231,7 @@ ul{
 		line-height: 40px;
 		display: none;
 	}
+
 	.hamburger-list-div.visible {
 		display: block;
 	}
@@ -257,17 +274,20 @@ ul{
 	}
 
 }
-@media (max-width: 600px){
-	.hamburger-list{
+
+@media (max-width: 600px) {
+	.hamburger-list {
 		width: 300px;
 		align-items: center;
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.languages{
+
+	.languages {
 		display: none;
 	}
-	.languages-2{
+
+	.languages-2 {
 		border-top: #a48044 1px dotted;
 		width: 100%;
 		margin-left: auto;
@@ -278,6 +298,11 @@ ul{
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
+
+	a.download-button {
+		font-size: 14px;
+	}
+
 }
 
 @media (max-width: 500px) {
@@ -313,9 +338,10 @@ ul{
 		padding-bottom: 10px;
 	}
 
-	.tp-caption.rev-video h2.h2-index{
+	.tp-caption.rev-video h2.h2-index {
 		font-size: 25px;
 	}
+
 	.home-image {
 		background-image: url('slider-images/home-piano.jpg');
 		background-size: cover;
