--- a/style.css
+++ b/style.css
@@ -112,12 +112,12 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.fa:hover{
-    color:#a48044;
+.fa:hover {
+	color: #a48044;
 }
 
-.fa:visited{
-    color:#fff;
+.fa:visited {
+	color: #fff;
 }
 
 .footer-s-1 {
@@ -177,28 +177,32 @@ body {
 .hamburger {
 	display: none;
 }
-.languages-2{
+
+.languages-2 {
 	display: none;
 }
-ul{
+
+ul {
 	padding: 0;
 	list-style-type: none;
 }
-.img-logo-competition{
+
+.img-logo-competition {
 	width: 350px;
 	margin-right: 25px;
 	margin-left: 25px;
 	margin-bottom: 25px;
 }
-a.download-button{
-	color: #a48044!important;
-	text-decoration: none!important;
+
+a.download-button {
+	color: #a48044 !important;
+	text-decoration: none !important;
 	letter-spacing: 2px;
 }
 
-a.download-button:hover{
-	color: #000!important;
-	text-decoration: none!important;
+a.download-button:hover {
+	color: #000 !important;
+	text-decoration: none !important;
 }
 
 
@@ -226,6 +230,7 @@ a.download-button:hover{
 		line-height: 40px;
 		display: none;
 	}
+
 	.hamburger-list-div.visible {
 		display: block;
 	}
@@ -268,17 +273,20 @@ a.download-button:hover{
 	}
 
 }
-@media (max-width: 600px){
-	.hamburger-list{
+
+@media (max-width: 600px) {
+	.hamburger-list {
 		width: 300px;
 		align-items: center;
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.languages{
+
+	.languages {
 		display: none;
 	}
-	.languages-2{
+
+	.languages-2 {
 		border-top: #a48044 1px dotted;
 		width: 100%;
 		margin-left: auto;
@@ -290,7 +298,7 @@ a.download-button:hover{
 		padding-bottom: 10px;
 	}
 
-	a.download-button{
+	a.download-button {
 		font-size: 14px;
 	}
 }
@@ -320,7 +328,8 @@ a.download-button:hover{
 		width: 250px;
 	}
 
-	.deadline, .img-logo-competition {
+	.deadline,
+	.img-logo-competition {
 		width: 250px;
 		margin: auto;
 		text-align: center;
@@ -328,9 +337,10 @@ a.download-button:hover{
 		padding-bottom: 10px;
 	}
 
-	.tp-caption.rev-video h2.h2-index{
+	.tp-caption.rev-video h2.h2-index {
 		font-size: 25px;
 	}
+
 	.home-image {
 		background-image: url('slider-images/home-piano.jpg');
 		background-size: cover;
