--- a/polish-version-calisia-web/foto.css
+++ b/polish-version-calisia-web/foto.css
@@ -14,6 +14,25 @@
     width: 100%;
 }
 
+.gallery-title{
+    font-size: 18px;
+    text-align: center;
+    color: #c0c0c0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+a {
+	color:#fff;
+	text-decoration: none;
+}
+
+a:hover{
+	color: #a48044;
+	text-decoration: none;
+}
+
 @media (max-width: 700px) {
     .lightgallery .image {
         width: calc(50% - 12px);
