--- a/chinese-version/style.css
+++ b/chinese-version/style.css
@@ -140,16 +140,17 @@ body {
 }
 
 .home-image {
-	background-image: url('slider-images/home-piano.jpg');
+	background-image: url('slider-images/IMG_8448-male.jpg');
 	background-size: cover;
 	height: 800px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-position: 0 -270px;
 }
 
 .home-content {
-	padding-bottom: 180px;
+	padding-bottom: 320px;
 }
 
 .tp-caption .topline,
@@ -157,8 +158,13 @@ body {
 	width: 400px;
 }
 
-.deadline,
-.img-logo-competition {
+.h2-index-box{
+	background-color: #000;
+	padding: 8px 15px 8px 15px;
+	opacity: 80%;
+}
+
+.deadline {
 	width: 350px;
 	margin: auto;
 	text-align: center;
@@ -303,6 +309,15 @@ a.download-button:hover {
 		font-size: 14px;
 	}
 
+	.home-image {
+		background-image: url('slider-images/IMG_8448-male.jpg');
+		background-size: cover;
+		height: 800px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-position: 0 -270px;
+	}
 }
 
 @media (max-width: 500px) {
@@ -330,7 +345,8 @@ a.download-button:hover {
 		width: 250px;
 	}
 
-	.deadline {
+	.deadline,
+	.img-logo-competition {
 		width: 250px;
 		margin: auto;
 		text-align: center;
@@ -343,8 +359,20 @@ a.download-button:hover {
 	}
 
 	.home-image {
-		background-image: url('slider-images/home-piano.jpg');
+		background-image: url('slider-images/IMG_8448-male.jpg');
 		background-size: cover;
-		background-position-x: 900px;
+		background-repeat: no-repeat; /* Zapobiega powtarzaniu zdjęcia */
+		background-position: center top; /* Ustawia zdjęcie wyżej */
+		height: 800px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-position: -5px 0px;
+
+		
+	}
+
+	.home-content {
+		padding-bottom: 500px;
 	}
 }
