--- a/polish-version-calisia-web/style.css
+++ b/polish-version-calisia-web/style.css
@@ -140,21 +140,28 @@ body {
 }
 
 .home-image {
-	background-image: url('slider-images/home-piano.jpg');
+	background-image: url('slider-images/IMG_8448-male.jpg');
 	background-size: cover;
 	height: 800px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-position: 0 -270px;
 }
 
 .home-content {
-	padding-bottom: 180px;
+	padding-bottom: 320px;
 }
 
 .tp-caption .topline,
 .tp-caption .bottomline {
 	width: 400px;
+}
+
+.h2-index-box{
+	background-color: #000;
+	padding: 8px 15px 8px 15px;
+	opacity: 80%;
 }
 
 .deadline {
@@ -188,9 +195,9 @@ ul {
 }
 
 .img-logo-competition {
-	display: block;
 	width: 350px;
-	margin: auto;
+	margin-right: 25px;
+	margin-left: 25px;
 	margin-bottom: 25px;
 }
 
@@ -206,7 +213,6 @@ a.download-button:hover {
 }
 
 
-
 @media (max-width: 993px) {
 	.navbar-nav {
 		display: none;
@@ -295,153 +301,23 @@ a.download-button:hover {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-around;
+		padding-top: 10px;
+		padding-bottom: 10px;
 	}
 
 	a.download-button {
 		font-size: 14px;
 	}
 
-}
-
-@media (max-width: 500px) {
-	.logo-calisia {
-		width: 120px;
-	}
-
-	.navbar-collapse {
-		flex-wrap: nowrap;
-		justify-content: space-between;
-		padding: 0;
-	}
-
-	.container {
-		height: 75px;
-	}
-
-	.navbar-default {
-		justify-content: space-between;
-		padding: 0;
-	}
-
-	.tp-caption .topline,
-	.tp-caption .bottomline {
-		width: 250px;
-	}
-
-	.deadline,
-	.img-logo-competition {
-		width: 250px;
-		margin: auto;
-		text-align: center;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-
-	.tp-caption.rev-video h2.h2-index {
-		font-size: 25px;
-	}
-
 	.home-image {
-		background-image: url('slider-images/home-piano.jpg');
+		background-image: url('slider-images/IMG_8448-male.jpg');
 		background-size: cover;
-		background-position-x: 900px;
-	}
-}
-
-@media (max-width: 993px) {
-	.navbar-nav {
-		display: none;
-	}
-
-	.container {
-		height: 120px;
-		padding: 0;
-		width: 100%;
-	}
-
-	.hamburger-list-div {
-		background-color: #000;
-		width: 100%;
-		color: #fff;
-		position: sticky;
-		margin: 0;
-		display: block;
-		padding: 10px;
-		font-size: 18px;
-		text-align: center;
-		line-height: 40px;
-		display: none;
-	}
-
-	.hamburger-list-div.visible {
-		display: block;
-	}
-
-	.li-hamburger {
-		list-style-type: none;
-	}
-
-	.int-collapse-menu {
-		color: #fff;
-		text-decoration: none;
-		list-style-type: none;
-		transition: all 0.2s ease-in-out;
-	}
-
-	.int-collapse-menu:hover {
-		color: #a48044;
-		text-decoration: none;
-		border: #a48044 1px solid;
-		padding: 8px;
-	}
-
-	.int-collapse-menu:visited {
-		text-decoration: none;
-	}
-
-	.navbar-default .navbar-collapse,
-	.navbar-default .navbar-form {
-		border: none !important;
-		box-shadow: none;
-	}
-
-	.hamburger {
-		display: block;
-		background-color: #000;
-		color: #a48044;
-		font-size: 18px;
-		border: 1px solid #a48044;
-		box-shadow: none;
-	}
-
-}
-
-@media (max-width: 600px) {
-	.hamburger-list {
-		width: 300px;
-		align-items: center;
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	.languages {
-		display: none;
-	}
-
-	.languages-2 {
-		border-top: #a48044 1px dotted;
-		width: 100%;
-		margin-left: auto;
-		margin-right: auto;
+		height: 800px;
 		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
+		justify-content: center;
+		align-items: center;
+		background-position: 0 -270px;
 	}
-
-	a.download-button {
-		font-size: 14px;
-	}
-
 }
 
 @media (max-width: 500px) {
@@ -483,8 +359,20 @@ a.download-button:hover {
 	}
 
 	.home-image {
-		background-image: url('slider-images/home-piano.jpg');
+		background-image: url('slider-images/IMG_8448-male.jpg');
 		background-size: cover;
-		background-position-x: 900px;
+		background-repeat: no-repeat; /* Zapobiega powtarzaniu zdjęcia */
+		background-position: center top; /* Ustawia zdjęcie wyżej */
+		height: 800px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-position: -5px 0px;
+
+		
+	}
+
+	.home-content {
+		padding-bottom: 500px;
 	}
 }
