--- a/style.css
+++ b/style.css
@@ -140,21 +140,28 @@ body {
 }
 
 .home-image {
-	background-image: url('slider-images/home-piano.jpg');
+	background-image: url('slider-images/IMG_8448-male.jpg');
 	background-size: cover;
 	height: 800px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-position: 0 -270px;
 }
 
 .home-content {
-	padding-bottom: 180px;
+	padding-bottom: 320px;
 }
 
 .tp-caption .topline,
 .tp-caption .bottomline {
 	width: 400px;
+}
+
+.h2-index-box{
+	background-color: #000;
+	padding: 8px 15px 8px 15px;
+	opacity: 80%;
 }
 
 .deadline {
@@ -301,6 +308,16 @@ a.download-button:hover {
 	a.download-button {
 		font-size: 14px;
 	}
+
+	.home-image {
+		background-image: url('slider-images/IMG_8448-male.jpg');
+		background-size: cover;
+		height: 800px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-position: 0 -270px;
+	}
 }
 
 @media (max-width: 500px) {
@@ -342,8 +359,20 @@ a.download-button:hover {
 	}
 
 	.home-image {
-		background-image: url('slider-images/home-piano.jpg');
+		background-image: url('slider-images/IMG_8448-male.jpg');
 		background-size: cover;
-		background-position-x: 900px;
+		background-repeat: no-repeat; /* Zapobiega powtarzaniu zdjęcia */
+		background-position: center top; /* Ustawia zdjęcie wyżej */
+		height: 800px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-position: -5px 0px;
+
+		
+	}
+
+	.home-content {
+		padding-bottom: 500px;
 	}
 }
