--- a/polish-version-calisia-web/style.css
+++ b/polish-version-calisia-web/style.css
@@ -85,7 +85,7 @@ body {
 
 .footer-wrapper {
 	display: block;
-	padding: 50px 0;
+	padding: 10px 0;
 	position: relative;
 	background-color: #000;
 }
@@ -150,7 +150,8 @@ body {
 }
 
 .home-content {
-	padding-bottom: 320px;
+	padding-bottom: 150px;
+
 }
 
 .tp-caption .topline,
@@ -159,9 +160,11 @@ body {
 }
 
 .h2-index-box{
-	background-color: #000;
-	padding: 8px 15px 8px 15px;
-	opacity: 80%;
+	font-size: 90px!important;
+}
+
+.logo-box{
+	padding-top: 25px;
 }
 
 .deadline {
@@ -212,6 +215,9 @@ a.download-button:hover {
 	text-decoration: none !important;
 }
 
+.tp-caption.rev-video h2.h2-index{
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+}
 
 @media (max-width: 993px) {
 	.navbar-nav {
@@ -373,6 +379,15 @@ a.download-button:hover {
 	}
 
 	.home-content {
-		padding-bottom: 500px;
+		padding-bottom: 200px;
+	}
+
+	.footer-wrapper{
+		padding: 0;
+		
+	}
+
+	.aligncenter{
+		padding-bottom: 10px;
 	}
 }
