--- a/polish-version-calisia-web/about.css
+++ b/polish-version-calisia-web/about.css
@@ -32,6 +32,8 @@ body {
     align-items: center;
     -webkit-box-pack: justify;
     justify-content: space-between;
+    padding: 0!important;
+
 }
 .navbar-default {
     background:none;
