--- a/polish-version-calisia-web/rules.css
+++ b/polish-version-calisia-web/rules.css
@@ -35,6 +35,8 @@ body {
     align-items: center;
     -webkit-box-pack: justify;
     justify-content: space-between;
+    padding: 0!important;
+
 }
 
 .navbar-default {
