--- a/polish-version-calisia-web/foto.css
+++ b/polish-version-calisia-web/foto.css
@@ -83,6 +83,8 @@ body {
 	align-items: center;
 	-webkit-box-pack: justify;
 	justify-content: space-between;
+	padding: 0!important;
+
 }
 
 .navbar-default {
