festiwal in nav

--- a/rules.css
+++ b/rules.css
@@ -35,6 +35,7 @@ body {
     align-items: center;
     -webkit-box-pack: justify;
     justify-content: space-between;
+    padding: 0;
 }
 
 .navbar-default {
