--- a/polish-version-calisia-web/festival.css
+++ b/polish-version-calisia-web/festival.css
@@ -500,6 +500,7 @@ ul {
     text-decoration: none;
     /* Brak podkreślenia */
     margin: 10px;
+    max-width: 200px;
 }
 
 .card:hover {
@@ -513,8 +514,27 @@ ul {
     /* Delikatne powiększenie na hover */
 }
 
+.link-google {
+    color: #a0a0a0;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.link-google:hover{
+    color: #a48044;
+    transform: scale(1.05);
+}
+
+.link-google:visited{
+    color: #fff;
+}
+
 .margin-bez{
-    height: 170px!important;
+    height: 200px!important;
+}
+
+.card2{
+    padding: 10px 5px;
 }
 
 @media (max-width: 993px) {
@@ -640,6 +660,10 @@ ul {
         height: 200px;
         justify-content: flex-start;
 
+    }
+
+    .main2{
+        height: 300px;
     }
 }
 
