--- a/festival.css
+++ b/festival.css
@@ -513,20 +513,37 @@ ul {
     transform: scale(1.05);
     /* Delikatne powiększenie na hover */
 }
-.link-google {
+.link2{
     color: #a0a0a0!important;
-    cursor: pointer!important;
-    transition: all 0.3s ease!important;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.link-google:hover{
+.link2:hover {
     color: #a48044!important;
     transform: scale(1.05)!important;
 }
 
-.link-google:visited{
-    color: #fff!important;
+.link2:visited{
+    color: #fff;
 }
+
+
+.link-google {
+    color: #a0a0a0;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.link-google:hover{
+    color: #a48044;
+    transform: scale(1.05);
+}
+
+.link-google:visited{
+    color: #fff;
+}
+
 .margin-bez{
     height: 200px!important;
 }
