--- a/polish-version-calisia-web/festival.css
+++ b/polish-version-calisia-web/festival.css
@@ -651,6 +651,11 @@ ul {
     .container-photo {
         width: 50%;
     }
+
+    .konkursbox{
+        height: 800px;
+    }
+    
 }
 
 @media (max-width: 700px) {
@@ -682,7 +687,7 @@ ul {
     }
 
     .main3{
-        height: 400px!important;
+        height: 400px!important ;
     }
 }
 
