--- a/polish-version-calisia-web/festival.css
+++ b/polish-version-calisia-web/festival.css
@@ -689,7 +689,10 @@ ul {
     .main3{
         height: 400px!important ;
     }
-}
+    
+    .deadline{
+        margin-top: 120px;
+    }
 
 @media (max-width: 600px) {
     .hamburger-list {
