--- a/polish-version-calisia-web/festival.css
+++ b/polish-version-calisia-web/festival.css
@@ -694,7 +694,7 @@ ul {
         margin-top: 120px;
     }
 
-    .container-text-photos{
+    .container-text-photos2{
         margin-top: 230px;
     }
 }
