--- a/polish-version-calisia-web/team.css
+++ b/polish-version-calisia-web/team.css
@@ -157,10 +157,13 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    margin-bottom: 50px;
-    padding: 30px;
-    background-color: rgb(9, 9, 9);
+    margin-bottom: 10px;
+    padding: 10px;
+    
 
+}
+.box1-team-new{
+    background-color: none;
 }
 .p-team{
     font-size: 18px;
